# Aether

./: .gitignore  CMakeLists.txt  README.md  compile.sh  main.cpp
dependencies/include/: color.h  header.h  lib.h  vec3.h
dependencies/lib/: color.cpp  lib.cpp  lib.h  vec3.cpp
